Cleanup deprecations and warnings